--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
@@ -18,9 +19,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-stars": "^1.2.2",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.18.10",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
